# super_agent

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  morrow.example.toml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: plc_subagent_api.md  subagent_api.md  各个subagent输入样例.md  形式化验证文档.md
src/morrow/: __init__.py  __main__.py  cli.py  config.py  core.py  model.py  protocol.py  sandbox.py  workspace.py
src/morrow/runtime/: __init__.py  agent.py  compaction.py  events.py  session_store.py
src/morrow/server/: __init__.py  app.py
src/morrow/server/assets/: app.js  index.html  style.css
src/morrow/tools/: __init__.py  builtins.py  mcp.py  patching.py  plc_subagents.py  registry.py
tests/: test_cli.py  test_config.py  test_core.py  test_mcp.py  test_model.py  test_plc_subagents.py  test_protocol.py  test_runtime_agent.py  test_sandbox.py  test_server.py  test_server_contract.py  test_session_store.py  test_tools.py  test_workspace.py
tests/fixtures/golden/: agent_event_variants.json  session_v1.json  session_v2.json  session_v3.json
web/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.tsx  api.ts  styles.css  types.ts
